[package]
name = "async-rust-ch05"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
async-task = "4.4.0"
futures-lite = "1.12.0"
flume = "0.10.14"

hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"] }
smol = "1.3.0"
anyhow = "1.0.70"
async-native-tls = "0.5.0"
http = "0.2.9"
rand = "0.8.5"
serde_json = "1.0"
mio = {version = "1.0.2", features = ["net", "os-poll"]}